[wip] reports screen

--- a/app/stylesheets/core/mixins.styl
+++ b/app/stylesheets/core/mixins.styl
@@ -11,3 +11,10 @@ clearfix()
 
 nolist()
   list-style: none outside
+
+box()
+  background-color: $itemGreyColor
+  box-sizing: border-box
+  padding: 1.25rem
+  color: $fontColor
+  border-radius: 6px
