--- a/app/stylesheets/core/overrides.styl
+++ b/app/stylesheets/core/overrides.styl
@@ -2,6 +2,32 @@
   -webkit-touch-callout: none
   -webkit-user-select: none
 
+input[type="text"]
+input[type="password"]
+input[type="email"]
+input[type="tel"]
+input[type="url"]
+input[type="date"]
+input[type="time"]
+input[type="datetime-local"]
+input[type="number"]
+select
+  -webkit-appearance: none
+  -moz-appearance: none
+  -ms-appearance: none
+  appearance: none
+
+input[type='date']
+input[type='time']
+  height: 3rem
+
+ul
+li
+ol
+  nolist()
+  padding: 0
+  margin: 0
+
 .topcoat-text-input
 .topcoat-button
 .topcoat-textarea
@@ -16,5 +42,5 @@
     box-shadow: inherit !important
     text-shadow: inherit !important
 
-.topcoat-list__item
-  list-style-type: none
+.topcoat-button
+  text-align: center
