--- a/app/stylesheets/core/layout.styl
+++ b/app/stylesheets/core/layout.styl
@@ -32,7 +32,7 @@ body
     left: 10%
     right: 10%
     top: 10%
-    bottom: 3%
+    bottom: 0
     overflow: hidden
 
 @media screen and (max-width: 640px)
