--- a/app/stylesheets/core/ui.styl
+++ b/app/stylesheets/core/ui.styl
@@ -16,3 +16,12 @@
   text-align: center
   color: $fontColor
   border-radius: 6px
+
+.clear-field
+  position: absolute
+  right: 15px
+  top: 50%
+  margin-top: -19px
+  font-size: 30px
+  color: $borderColor
+  z-index: 50
