--- a/app/stylesheets/modules/all.styl
+++ b/app/stylesheets/modules/all.styl
@@ -1,3 +1,5 @@
 @import 'modules/header'
 @import 'modules/login'
 @import 'modules/navigation'
+@import 'modules/datetime'
+@import 'modules/reports'
