--- a/app/templates/layouts/navigation.jade
+++ b/app/templates/layouts/navigation.jade
@@ -5,14 +5,20 @@
 div(class='topcoat-list__container navigation-list-container')
   ul(class='topcoat-list')
     li(class='topcoat-list__item navigation-list-item')
-      a(href=routes.rootPath() class='navigation-button js-link')
+      a(href=routes.allReports() class='navigation-button js-link')
         .link-box
-          span Link 1
+          span Reports
         .fa-box
           i(class='fa fa-angle-right')
     li(class='topcoat-list__item navigation-list-item')
-      a(href=routes.somelink() class='navigation-button js-link')
+      a(href=routes.createReport() class='navigation-button js-link')
         .link-box
-          span Link 2
+          span Create Report
+        .fa-box
+          i(class='fa fa-angle-right')
+    li(class='topcoat-list__item navigation-list-item')
+      a(href=routes.createTemplate() class='navigation-button js-link')
+        .link-box
+          span Create Template
         .fa-box
           i(class='fa fa-angle-right')
