replaced web datepicker with native

--- a/app/templates/ui/datetime.jade
+++ b/app/templates/ui/datetime.jade
@@ -2,7 +2,7 @@
 ul
   li
     .clear-field &times;
-    input(id=dateId class='topcoat-text-input' type='date' name='date' min='2013-01-01')
+    div(id=dateId class='datetime-box date-box' data-name='date')
   li
     .clear-field &times;
-    input(id=timeId class='topcoat-text-input' type='time' name='time')
+    div(id=timeId class='datetime-box time-box' data-name='time')
