--- a/app/stylesheets/core/ui.styl
+++ b/app/stylesheets/core/ui.styl
@@ -25,3 +25,20 @@
   font-size: 30px
   color: $borderColor
   z-index: 50
+
+.datetime-box
+  height: 3rem
+  line-height: 3rem
+  font-size: 16px
+  letter-spacing: 1px
+  padding: 0 1.25rem
+  border: 1px solid #9daca9
+  border-radius: 6px
+  background-color: #fff
+  box-shadow: inset 0 1px rgba(0, 0, 0, 0.1)
+  color: #454545
+  vertical-align: top
+  margin: 5px 0 5px 0
+
+  &:active
+    border: 1px solid $blueColor
