--- a/app/stylesheets/modules/reports.styl
+++ b/app/stylesheets/modules/reports.styl
@@ -2,10 +2,15 @@
   height: 100%
 
 .controls
-  // convert to rem
+  min-height: 13rem
   height: 23%
 
 .reports
-  height: 77%
   overflow: auto
   -webkit-overflow-scrolling: touch
+  position: absolute
+  box-sizing: border-box
+  top: 13.4rem
+  left: 0
+  right: 0
+  bottom: 0
