completed reports view

--- a/app/stylesheets/core/mixins.styl
+++ b/app/stylesheets/core/mixins.styl
@@ -18,3 +18,11 @@ box()
   padding: 1.25rem
   color: $fontColor
   border-radius: 6px
+
+scrollBox()
+  position: absolute
+  left: 0
+  right: 0
+  bottom: 0
+  overflow: auto
+  -webkit-overflow-scrolling: touch
