--- a/app/templates/all_reports/reports_list.jade
+++ b/app/templates/all_reports/reports_list.jade
@@ -1,33 +1,7 @@
 .topcoat-list
-  h3.topcoat-list__header Reports
+  .topcoat-list__header
+    span(class='child-item item-id') Report ID
+    span(class='child-item item-manager') Manager
+    span(class='child-item item-date') Date
   ul.topcoat-list__container
-    li.topcoat-list__item
-      | Item
-    li.topcoat-list__item
-      | Item
-    li.topcoat-list__item
-      | Item
-    li.topcoat-list__item
-      | Item
-    li.topcoat-list__item
-      | Item
-    li.topcoat-list__item
-      | Item
-    li.topcoat-list__item
-      | Item
-    li.topcoat-list__item
-      | Item
-    li.topcoat-list__item
-      | Item
-    li.topcoat-list__item
-      | Item
-    li.topcoat-list__item
-      | Item
-    li.topcoat-list__item
-      | Item
-    li.topcoat-list__item
-      | Item
-    li.topcoat-list__item
-      | Item
-    li.topcoat-list__item
-      | Item
+
