[wip] view part

--- a/app/stylesheets/core/overrides.styl
+++ b/app/stylesheets/core/overrides.styl
@@ -48,3 +48,9 @@ ol
 .topcoat-list__header
   clearfix()
   font-size: 16px
+
+.topcoat-textarea
+  padding: 1rem
+  font-size: 20px
+  border-radius: 6px
+  line-height: 1.4
