--- a/app/stylesheets/modules/report.styl
+++ b/app/stylesheets/modules/report.styl
@@ -1,6 +1,5 @@
 .report-fields
-  height: 11.5rem
-
+.manager-box
   .text-box
     clearfix()
     border: 1px solid $borderColor
@@ -13,6 +12,9 @@
     .value
       col(1/2)
       text-align: right
+
+.report-fields
+  height: 11.5rem
 
 .items-list
   scrollBox()
