--- a/app/templates/layouts/create_report.jade
+++ b/app/templates/layouts/create_report.jade
@@ -1,1 +1,80 @@
-| Create Report screen
+.manager-box
+  .text-box
+    .key Current manager
+    .value MaratFakhreev
+
+.create-items-list
+  .topcoat-list
+    .topcoat-list__header
+      span(class='child-item') Report items
+    ul.topcoat-list__container
+      li.topcoat-list__item
+        div(class='child-item key') iPad
+        div(class='child-item value')
+          label(class='topcoat-switch')
+            input(type='checkbox' class='topcoat-switch__input')
+            .topcoat-switch__toggle
+      li.topcoat-list__item
+        div(class='child-item key') iPad
+        div(class='child-item value')
+          label(class='topcoat-switch')
+            input(type='checkbox' class='topcoat-switch__input' checked)
+            .topcoat-switch__toggle
+      li.topcoat-list__item
+        div(class='child-item key') iPad
+        div(class='child-item value')
+          label(class='topcoat-switch')
+            input(type='checkbox' class='topcoat-switch__input')
+            .topcoat-switch__toggle
+      li.topcoat-list__item
+        div(class='child-item key') iPad
+        div(class='child-item value')
+          label(class='topcoat-switch')
+            input(type='checkbox' class='topcoat-switch__input')
+            .topcoat-switch__toggle
+      li.topcoat-list__item
+        div(class='child-item key') iPad
+        div(class='child-item value')
+          label(class='topcoat-switch')
+            input(type='checkbox' class='topcoat-switch__input')
+            .topcoat-switch__toggle
+      li.topcoat-list__item
+        div(class='child-item key') iPad
+        div(class='child-item value')
+          input(type='text' class='topcoat-text-input')
+      li.topcoat-list__item
+        div(class='child-item key') iPad
+        div(class='child-item value')
+          label(class='topcoat-switch')
+            input(type='checkbox' class='topcoat-switch__input')
+            .topcoat-switch__toggle
+      li.topcoat-list__item
+        div(class='child-item key') iPad
+        div(class='child-item value')
+          label(class='topcoat-switch')
+            input(type='checkbox' class='topcoat-switch__input')
+            .topcoat-switch__toggle
+      li.topcoat-list__item
+        div(class='child-item key') iPad
+        div(class='child-item value')
+          input(type='text' class='topcoat-text-input')
+      li.topcoat-list__item
+        div(class='child-item key') iPad
+        div(class='child-item value')
+          label(class='topcoat-switch')
+            input(type='checkbox' class='topcoat-switch__input')
+            .topcoat-switch__toggle
+      li.topcoat-list__item
+        div(class='child-item key') iPad
+        div(class='child-item value')
+          label(class='topcoat-switch')
+            input(type='checkbox' class='topcoat-switch__input')
+            .topcoat-switch__toggle
+      li.topcoat-list__item
+        div(class='child-item key') iPad
+        div(class='child-item value')
+          input(type='text' class='topcoat-text-input')
+  textarea(class='topcoat-textarea' rows='5' placeholder='Please write short description to your report')
+
+.submit-button-box
+  button(class="topcoat-button--cta") Submit report
