finished report creating functionality

--- a/app/stylesheets/core/overrides.styl
+++ b/app/stylesheets/core/overrides.styl
@@ -54,3 +54,9 @@ ol
   font-size: 20px
   border-radius: 6px
   line-height: 1.4
+
+.topcoat-switch__toggle:before
+  content: 'YES'
+
+.topcoat-switch__toggle:after
+  content: 'NO'
