--- a/app/stylesheets/modules/navigation.styl
+++ b/app/stylesheets/modules/navigation.styl
@@ -12,6 +12,13 @@
   .user
     center(90%)
 
+    span
+      display: block
+      line-height: 2.5rem
+
+      &:first-child
+        border-bottom: 1px solid $bgDarkGreyColor
+
   .navigation-list-container
     padding-top: 3rem
     border: none
