--- a/app/templates/layouts/navigation.jade
+++ b/app/templates/layouts/navigation.jade
@@ -1,5 +1,7 @@
 .user
-  .nickname.text-box #{username}
+  .text-box
+    span #{company}
+    span #{manager}
   div(class='topcoat-button logout') Logout
 
 div(class='topcoat-list__container navigation-list-container')
