--- a/app/stylesheets/modules/create_report.styl
+++ b/app/stylesheets/modules/create_report.styl
@@ -18,11 +18,13 @@
       col(7/10)
       line-height: 3rem
       text-align: left
-      font-size: 20px
+      font-size: 18px
       vertical-align: bottom
 
     &.value
       col(3/10)
+      position: relative
+      z-index: 100
 
       .topcoat-switch
       .topcoat-text-input
