--- a/app/templates/layouts/create_report.jade
+++ b/app/templates/layouts/create_report.jade
@@ -7,74 +7,9 @@
   .topcoat-list
     .topcoat-list__header
       span(class='child-item') Report items
-    ul.topcoat-list__container
-      li.topcoat-list__item
-        div(class='child-item key') iPad
-        div(class='child-item value')
-          label(class='topcoat-switch')
-            input(type='checkbox' class='topcoat-switch__input')
-            .topcoat-switch__toggle
-      li.topcoat-list__item
-        div(class='child-item key') iPad
-        div(class='child-item value')
-          label(class='topcoat-switch')
-            input(type='checkbox' class='topcoat-switch__input' checked)
-            .topcoat-switch__toggle
-      li.topcoat-list__item
-        div(class='child-item key') iPad
-        div(class='child-item value')
-          label(class='topcoat-switch')
-            input(type='checkbox' class='topcoat-switch__input')
-            .topcoat-switch__toggle
-      li.topcoat-list__item
-        div(class='child-item key') iPad
-        div(class='child-item value')
-          label(class='topcoat-switch')
-            input(type='checkbox' class='topcoat-switch__input')
-            .topcoat-switch__toggle
-      li.topcoat-list__item
-        div(class='child-item key') iPad
-        div(class='child-item value')
-          label(class='topcoat-switch')
-            input(type='checkbox' class='topcoat-switch__input')
-            .topcoat-switch__toggle
-      li.topcoat-list__item
-        div(class='child-item key') iPad
-        div(class='child-item value')
-          input(type='text' class='topcoat-text-input')
-      li.topcoat-list__item
-        div(class='child-item key') iPad
-        div(class='child-item value')
-          label(class='topcoat-switch')
-            input(type='checkbox' class='topcoat-switch__input')
-            .topcoat-switch__toggle
-      li.topcoat-list__item
-        div(class='child-item key') iPad
-        div(class='child-item value')
-          label(class='topcoat-switch')
-            input(type='checkbox' class='topcoat-switch__input')
-            .topcoat-switch__toggle
-      li.topcoat-list__item
-        div(class='child-item key') iPad
-        div(class='child-item value')
-          input(type='text' class='topcoat-text-input')
-      li.topcoat-list__item
-        div(class='child-item key') iPad
-        div(class='child-item value')
-          label(class='topcoat-switch')
-            input(type='checkbox' class='topcoat-switch__input')
-            .topcoat-switch__toggle
-      li.topcoat-list__item
-        div(class='child-item key') iPad
-        div(class='child-item value')
-          label(class='topcoat-switch')
-            input(type='checkbox' class='topcoat-switch__input')
-            .topcoat-switch__toggle
-      li.topcoat-list__item
-        div(class='child-item key') iPad
-        div(class='child-item value')
-          input(type='text' class='topcoat-text-input')
-  textarea(class='topcoat-textarea' rows='5' placeholder='Please write short description to your report')
+    .items-region
+
+  textarea(class='topcoat-textarea report-text' rows='5' placeholder='Please write short description for your report')
 
 .submit-button-box
-  button(class="topcoat-button--cta") Submit report
+  button(id='submit_button' class="topcoat-button--cta") Submit report
