--- a/app/templates/login/login.jade
+++ b/app/templates/login/login.jade
@@ -1,4 +1,5 @@
 div(class='login-form')
-  input(type='text' class='topcoat-text-input' placeholder='login' value='' name='name')
+  input(type='text' class='topcoat-text-input' placeholder='company' value='' name='company')
+  input(type='text' class='topcoat-text-input' placeholder='manager' value='' name='manager')
   input(type='password' class='topcoat-text-input' placeholder='password' value='' name='password')
   button(class='topcoat-button submit-button') Log in
