[wip] create template functionality

--- a/app/stylesheets/core/base.styl
+++ b/app/stylesheets/core/base.styl
@@ -4,3 +4,7 @@ $itemGreyColor = #e5e9e8
 $borderColor = #9daca9
 $fontColor = #454545
 $blueColor = #288edf
+$darkBlueColor = #1e7dc8
+$whiteColor = #ffffff
+$redColor = #ec514e
+$darkRedColor = #c54442
