--- a/app/stylesheets/core/mixins.styl
+++ b/app/stylesheets/core/mixins.styl
@@ -26,3 +26,19 @@ scrollBox()
   bottom: 0
   overflow: auto
   -webkit-overflow-scrolling: touch
+
+borderLeftRadius()
+  border-top-left-radius: 6px
+  border-bottom-left-radius: 6px
+
+borderRightRadius()
+  border-top-right-radius: 6px
+  border-bottom-right-radius: 6px
+
+borderTopRadius()
+  border-top-right-radius: 6px
+  border-top-left-radius: 6px
+
+borderBottomRadius()
+  border-bottom-right-radius: 6px
+  border-bottom-left-radius: 6px
