--- a/app/stylesheets/modules/all.styl
+++ b/app/stylesheets/modules/all.styl
@@ -5,3 +5,5 @@
 @import 'modules/reports'
 @import 'modules/report'
 @import 'modules/create_report'
+@import 'modules/create_template'
+@import 'modules/create_new_item'
