--- a/app/stylesheets/modules/create_new_item.styl
+++ b/app/stylesheets/modules/create_new_item.styl
@@ -5,7 +5,6 @@
   box-sizing: border-box
   border-radius: 50%
   border: 2px solid $borderColor
-  transform: scale(1)
   transition: all 0.1s ease
   position: relative
   z-index: 10
@@ -63,13 +62,12 @@
     color: $blueColor
     font-size: 36px
 
-.create-new-item-region
-.edit-item-region
+.item-form-region
   clearfix()
   background-color: $bgDarkGreyColor
   borderBottomRadius()
 
-  .add-item-box
+  .new-item-box
     padding: 1.25rem 0
 
   .row
@@ -92,9 +90,6 @@
 
   .types
     col(6/10)
-
-    .item-name-input
-      // border: 1px solid #777
 
     .circles-box
       clearfix()
