--- a/app/stylesheets/modules/create_template.styl
+++ b/app/stylesheets/modules/create_template.styl
@@ -27,61 +27,86 @@
       .f-icon
         border-bottom-right-radius: 0px
 
-  .title
-    center(100%)
-
   .add-item-inner
     clearfix()
     border-bottom: 1px solid $borderColor
 
+  .title
+    center(100%)
 
 .create-template-list
+  scrollBox()
+  top: 22rem
+
+  .f-icon
+    width: 4rem
+    height: 4rem
+    border-radius: 0px
+    text-align: center
+
+    &.fa-times
+      background-color: rgba($redColor, 0.7)
+
+      &:active
+      &.active
+        background-color: $redColor
+
+    &.fa-pencil-square-o
+      &::before
+      &::after
+        line-height: 4.2rem
+
+    &::before
+    &::after
+      font-size: 26px
+      line-height: 4rem
+
   .topcoat-list__item
     clearfix()
     overflow: hidden
     position: relative
     padding: 0
-    height: 4rem
 
-    .circle
-      position: relative
-      transform: scale(0.5)
-      top: -1.1rem
-      left: -1rem
+    .item-inner
+      height: 4rem
       overflow: hidden
+      clearfix()
 
-      &:active
+      .circle-wrapper
+        position: relative
         transform: scale(0.5)
+        top: -1.1rem
+        left: -1rem
+        z-index: 0
 
-    .type
-      col(2/10)
-
-    .name
-      col(5/10)
-      height: 4rem
-      line-height: 4rem
-      position: relative
-      left: -2.5rem
-
-    .f-icon
-      width: 4rem
-      height: 4rem
-      border-radius: 0px
-      text-align: center
-
-      &.fa-times
-        background-color: rgba($redColor, 0.7)
+      .circle
+        overflow: hidden
+        z-index: 0
 
         &:active
-        &.active
-          background-color: $redColor
+          transform: scale(0.5)
 
-      &.fa-pencil-square-o
-        &::before
-        &::after
-          line-height: 4.2rem
+      .item-type
+        col(2/10)
 
-      &::before
-      &::after
-        font-size: 26px
+      .item-name
+        col(5/10)
+        height: 4rem
         line-height: 4rem
+        position: relative
+        left: -2.5rem
+
+  .create-item
+    margin: 0
+    display: none
+
+    .text-box
+      border: none
+      border-top: 1px solid $borderColor
+      border-radius: 0
+
+    .item-form-region
+      border-radius: 0
+
+    .item-form-region
+      background-color: transparent
