--- a/app/templates/layouts/create_template.jade
+++ b/app/templates/layouts/create_template.jade
@@ -3,35 +3,7 @@
     .add-item-inner
       span.title Add new item
 
-    .create-new-item-region
-      .add-item-box
-        .row
-          .desc
-            span.desc-name
-              | Write the name for new item
-          .types
-            input(type='text' class='topcoat-text-input item-name-input' placeholder='for example: Screwdriver')
-        .row
-          .desc
-            span.desc-types
-              | Choose the type for new item
-              br
-              | ( YES/NO | Count | Text )
-          .types
-            .circles-box
-              .circle-wrapper
-                .circle.boolean.active
-                  label(class='topcoat-switch')
-                    input(type='checkbox' class='topcoat-switch__input' checked)
-                    .topcoat-switch__toggle
-              .circle-wrapper
-                .circle.integer
-                  input(type='text' class='topcoat-text-input' value='46')
-              .circle-wrapper
-                .circle.string
-                  input(type='text' class='topcoat-text-input' value='reserved')
-        .row
-          button(class="topcoat-button--cta submit-button") Save new item
+    .item-form-region
 
 .create-template-list
   .topcoat-list
